--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,8 @@ $variables: (
   'border-radius': 3px,
   'border-color': #eaeaea,
   'input-color': #f2f2f2,
+
+  'action': #f0ad4e,
 );
 
 @function GetVariable($key) {
